[package]
name = "ActixWeb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
log = "0.4"  
futures = "0.3"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"

[[bin]]
name = "actix_web_api"
path = "src/main.rs"